--- a/our_site_server/package.json
+++ b/our_site_server/package.json
@@ -1,9 +1,11 @@
 {
+  
   "name": "our_site_server",
   "version": "1.0.0",
   "description": "myserpro",
   "main": "index.js",
   "type": "module",
+ 
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +13,10 @@
   "author": "sunil kumar",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^2.2.12",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
 }
