--- a/our_site_server/.env
+++ b/our_site_server/.env
@@ -1,2 +1,13 @@
 DB_USERNAME=suinl_kumar
 DB_PASSWORD=obRaxUVsCnNNLa7R
+
+# PAYTM_MID=DIY12386817555501617
+# PAYTM_WEBSITE=DIYtestingweb
+# PAYTM_CHANNEL_ID=WEB
+# PAYTM_INDUSTRY_TYPE_ID=Retail
+# PAYTM_CUST_ID=unzVbW56349744191124
+# PAYTM_MERCHANT_KEY=bKMfNxPPf_QdZppa
+
+# Razorpay payment
+RAZORPAY_KEY_ID=rzp_test_ywoBoLrFabJAe7
+RAZORPAY_SECRET=CQFIi4HlBPR85GUR6t0nncBQ
