--- a/our_site_server/package.json
+++ b/our_site_server/package.json
@@ -1,22 +1,60 @@
 {
   
   "name": "our_site_server",
+  
   "version": "1.0.0",
+  
   "description": "myserpro",
+  
   "main": "index.js",
+  
   "type": "module",
- 
+  
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  
+    
+  "start": "nodemon index.js",
+  
+    
+  "test": "echo \"Error: no test specified\" && exit 1"
+  
   },
+  
   "author": "sunil kumar",
+  
   "license": "ISC",
+  
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongodb": "^2.2.12",
-    "mongoose": "^8.0.3",
-    "nodemon": "^3.0.2"
+  
+    
+  "cors": "^2.8.5",
+  
+    
+  "dotenv": "^16.3.1",
+  
+    
+  "express": "^4.18.2",
+  
+    
+  "formidable": "^3.5.1",
+  
+    
+  "https": "^1.0.0",
+  
+    
+  "mongodb": "^2.2.12",
+  
+    
+  "mongoose": "^8.0.3",
+  
+    
+  "nodemon": "^3.0.2",
+  
+    
+  "razorpay": "^2.9.2",
+  
+    
+  "uuid": "^9.0.1"
+  
   }
 }
